# zurich

./: .gitignore  LICENSE  about.markdown  cleanRefresh.sh  contact.markdown  index.html  new.sh  publish.sh  refresh.sh  site.hs  stack.yaml  withDayNew.sh  withDayNewd.sh  zurich-blog.cabal
.ipynb_checkpoints/: IntervalArithmetic-checkpoint.ipynb
css/: bronx-updated.css  default.css
docs/: about.html  archive.html  contact.html  index.html
footnotes/: Footnotes.js
other/: newd.sh
posts/: #2017-09-01-First-Day.markdown#  2017-09-03-Jet-Lag.markdown  2017-09-06-Bros-Who-Code.markdown  2017-09-07-Awesome-Day.markdown  2017-09-09-Hike.markdown  2017-09-10-Sleepy-Sunday.markdown  2017-09-12-Prufung-And-Grilled-Sandwich.markdown  2017-09-15-A-Strange-Dream.markdown  2017-09-16-In-The-Center-Of-It-All.markdown  2017-09-24-Sunday-In-The-Sun.markdown  2017-09-28-Thursday-Highlights.markdown  2017-10-01-Epic-Hike.markdown  2017-10-02-Coffee-And-Pilates.markdown  2017-10-04-Free-Day-2.markdown  2017-10-05-Zurich-Film-Festival.markdown  2017-10-06-Groceries-in-Germany.markdown  2017-10-07-Programming-Competition.markdown  2017-10-09-An-Ordinary-Day.markdown  2017-10-15-Homework-Day.markdown  2017-10-18-Volleyball-Round-2.markdown  2017-10-20-Lit-AF.markdown  2017-10-21-Appenzell-Part-2.markdown  2017-10-22-Through-The-Valley-of-Death.markdown  2017-10-23-Randomized-Algorithms-Mayhem.markdown  2017-10-24-Martin's-Guitar-Bar.markdown  2017-10-25-Lunch-with-Coraline.markdown  2017-10-26-Just-Ship-It-(Me).markdown  2017-10-27-Volleyball-and-a-Lit-Night-at-Home.markdown  (+131 more)
(+223 files in other folders)
